# qgis2google2

./: CMakeLists.txt  qgis2google.cpp  qgis2google.h  qgis2google.qrc  qgsgoogleearthtool.h  qgskmlconverter.cpp  qgskmlsettingsdialog.cpp  qgskmlsettingsdialog.h
.svn/: all-wcprops  entries
.svn/text-base/: qgsgoogleearthtool.cpp.svn-base  qgskmlconverter.h.svn-base  qgskmlsettingsdialogbase.ui.svn-base
icons/.svn/: all-wcprops  entries
translations/: qgis2google_ru.ts
translations/.svn/: all-wcprops  entries
translations/.svn/text-base/: qgis2google_ru.qm.svn-base
